<resources>
    <string name="app_name">CWI Estacionamento</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="signin">Entrar</string>
    <string name="error_login">Erro ao realizar login.</string>
    <string name="perfil">Perfil</string>
    <string name="vagas">Vagas</string>
    <string name="mapa_vagas">Mapa de Vagas</string>
    <string name="sign_up_label">Criar conta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Cadastrar</string>

    <string name="vaga_indisponivel">Vaga indisponível.</string>
    <string name="sim">Sim</string>
    <string name="cancelar">Cancelar</string>
    <string name="adicionar_vaga">Gostaria de selecionar essa vaga?</string>
    <string name="home">Home</string>
    <string name="lista_de_vagas">Lista de Vagas</string>
    <string name="mapa_das_vagas">Mapa das Vagas</string>
    <string name="ver_vagas">Ver vagas</string>
    <string name="person_name">Nome:</string>
    <string name="person_email">E-mail:</string>
    <string name="save">Salvar</string>
    <string name="save_perfil_success">Nome salvo com sucesso.</string>
    <string name="save_perfil_failed_">Ocorreu um erro ao salvar o perfil.</string>
    <string name="actual_password">Senha atual:</string>
    <string name="new_password">Nova senha:</string>
    <string name="logout">Sair</string>
    <string name="tem_vaga">No momento, você disponibilizou a sua vaga fixa para que possa ser usada por outro colaborador.</string>
    <string name="tem_vaga_ocupada">A vaga que você disponibilizou está sendo utilizada. \n Você pode entrar em contato com o colaborador que está utilizando pelo email:&#160;</string>
    <string name="tem_vaga_disponivel">Você possui uma vaga fixa. \n Caso não vá utiliza-la, disponibilize para que outro colaborador possa aproveitar o benefício do estacionamento.</string>
    <string name="usando_vaga_de">Você está utilizando a vaga que outro colaborador disponibilizou. Caso necessário, entre em contato com ele pelo email:&#160;</string>
    <string name="nao_tem_vaga">Você não possui uma vaga fixa. \n Caso tenha interesse em uma vaga temporária, procure uma vaga disponivel na lista de vagas.</string>
    <string name="disponib_minha_vaga">Disponibilizar Minha Vaga</string>
    <string name="possui_vaga">Você já possui uma vaga.</string>
    <string name="vagas_disp_hoje">Vagas disponíveis hoje:</string>
    <string name="minha_vaga">Minha Vaga</string>
    <string name="vaga_atual_title">O número da sua vaga atual é</string>
    <string name="person_image_url">URL da imagem:</string>
    <string name="vagas_disponiveis">Vagas Disponíveis</string>
    <string name="lista_de_vagas_disponiveis">Lista de Vagas Disponibilizadas Hoje</string>
</resources>
