<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:padding="18dp"
    android:background="@drawable/background_login"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/logo_login"
        android:layout_margin="18dp"
        android:background="@android:color/transparent"
        android:layout_marginBottom="16dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayout"
        android:textColorHint="@android:color/black"
        app:passwordToggleTint="@android:color/black"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_gravity="center"
        android:theme="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/black"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/black"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/signInEmailPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:textAllCaps="false"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInGoogleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/creatAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_label"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@android:color/black"/>

</LinearLayout>