<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="40dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:text="@string/adicionar_vaga"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonSelecionarVaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/sim"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto" />

    <Button
        android:id="@+id/buttonCancelarVaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cancelar"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto" />

</android.support.constraint.ConstraintLayout>