<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".activities.PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <RelativeLayout
            android:id="@+id/relativeLayoutHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="@drawable/background"
                android:scaleType="centerCrop" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageViewPerfil"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:src="@drawable/profile_picture" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relativeLayoutHeader"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="25dp"
                android:text="Editar perfil"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:theme="@style/TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/personName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/person_name"
                    android:inputType="textCapWords"
                    android:text="Nome da pessoa" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:theme="@style/TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/personEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/person_email"
                    android:inputType="textEmailAddress"
                    android:text="pessoa@google.com" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:theme="@style/TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/personActualPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/actual_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:theme="@style/TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/personNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/savePerfilButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>