<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff">

    <ImageView
        android:id="@+id/imageViewReservada"
        android:layout_width="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:layout_height="160dp"
        android:padding="50dp"
        android:background="#bebebe"
        android:src="@drawable/ic_error_outline" />

    <TextView
        android:id="@+id/vagaReservada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/possui_vaga"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="16sp"
        android:textColor="#ff000000"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/imageViewReservada"/>

    <TextView
        android:id="@+id/deixarVagaReservada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gostaria de disponibilizar sua vaga?"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="#ff000000"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/vagaReservada"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deixarVagaReservada"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDisponibilizarVagaReservada"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/sim"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/cancelar"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>